--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^0.18.0",
     "@astrojs/tailwind": "^3.1.0",
     "astro": "^2.1.2",
+    "date-fns": "^2.29.3",
     "tailwindcss": "^3.2.7"
   }
 }
