--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.0",
+    "@astrojs/sitemap": "^1.2.0",
     "@astrojs/tailwind": "^3.1.0",
     "astro": "^2.1.2",
     "date-fns": "^2.29.3",
