--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/sitemap": "^1.2.0",
     "@astrojs/tailwind": "^3.1.0",
     "astro": "^2.1.2",
+    "astro-analytics": "^2.6.0",
     "date-fns": "^2.29.3",
     "tailwindcss": "^3.2.7"
   }
