--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.5",
     "date-fns": "^2.29.3",
+    "marked": "^12.0.1",
     "tailwindcss": "^3.2.7"
   }
 }
